# logreg-c

./: CMakeLists.txt  README.md
src/: main.c
src/lib/: array.c  array.h  dataset.c  dataset.h  error.h  logreg.c  logreg.h
